<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="tab_text_1">India Count</string>
    <string name="tab_text_2">State-wise Count</string>
    <string name="night_mode">Night Mode</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="total">Total</string>
    <string name="state">State</string>
    <string name="world">World \  </string>
    <string name="default_count">0</string>
    <string name="india">India \  </string>
    <string name="active">Active</string>
    <string name="swipe_instruction">Swipe for State-wise Data -> \ </string>
</resources>